@@ -3,3 +3,5 @@
 'Open Bug Report Form' opening the suggestion form. My bad.
 [+] Added Minecraft 1.12.2 [If the other Minecraft versions are laggy use
 this.]
+[+] Added Doki Doki Literature Club (Thanks for the suggestion Theo) [...
+you guys are some weird individuals.]
